# pyhri

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt  rosdoc.yaml  setup.py
docs/: conf.py  index.rst
src/hri/: __init__.py  body.py  face.py  hri.py  person.py  voice.py
src/pyhri/: body.py  face.py  hri.py
test/: test_pyhri.py  test_pyhri.test
